add 1d conv cpu optimization v5

--- a/conv1d_cpu.ipynb
+++ b/conv1d_cpu.ipynb
@@ -26,7 +26,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d01beb2d-fd40-49ec-ca0f-72149d25cdef"
+        "outputId": "ef76e2dc-c72f-431a-ef7a-919f1a842937"
       },
       "outputs": [
         {
@@ -43,35 +43,14 @@
             "Requirement already satisfied: psutil in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (5.9.5)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (1.14.1)\n",
             "Requirement already satisfied: tornado in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (6.4.2)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (4.12.2)\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install tlcpack-nightly-cu102 -f https://tlcpack.ai/wheels"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install \"numpy<2.0.0\""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zc3dECsUvY5g",
-        "outputId": "14781a03-4dba-4006-d569-c81da6c15297"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (4.13.1)\n",
             "Requirement already satisfied: numpy<2.0.0 in /usr/local/lib/python3.11/dist-packages (1.26.4)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install tlcpack-nightly-cu102 -f https://tlcpack.ai/wheels\n",
+        "!pip install \"numpy<2.0.0\""
       ]
     },
     {
@@ -245,17 +224,6 @@
         "    t1 = time.time()\n",
         "    return (t1 - t0) / num_runs, out\n",
         "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "ZmZX8ey5vqtV"
-      },
-      "execution_count": 22,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "M = 4096\n",
         "N = 128\n",
         "dtype = \"float32\"\n",
@@ -263,9 +231,18 @@
         "a_np = np.random.rand(M).astype(dtype)\n",
         "w_np = np.random.rand(N).astype(dtype)\n",
         "ref = np.convolve(a_np, w_np)\n",
-        "\n",
+        "dev = tvm.cpu()"
+      ],
+      "metadata": {
+        "id": "ZmZX8ey5vqtV"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# naive TVM\n",
-        "dev = tvm.cpu()\n",
         "naive_time, naive_res, naive_func, naive_comp = benchmark_conv1d_tvm(\n",
         "    make_conv1d_cpu_scheduler_naive, M, N, dev, a_np, w_np\n",
         ")\n",
@@ -279,7 +256,7 @@
         "id": "ZIq-K6fqv8JF",
         "outputId": "5fad923b-0b1d-4939-81ae-e16d6ef9ce89"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +299,7 @@
         "id": "rxl8xPI2x-I-",
         "outputId": "57d87823-bd28-4022-95dc-3b1eb018456c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +342,7 @@
         "id": "CbO6RfMcyBj8",
         "outputId": "60839395-4686-4a09-cef3-1f4b29e7eb48"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +385,7 @@
         "id": "e2TBqQE4yCxg",
         "outputId": "9b0d83f0-e77b-4631-e2a9-f2b8aeeac4a2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +432,7 @@
         "id": "RVWiOoD3yD3l",
         "outputId": "8a44dd00-0c70-43be-ef04-3fc43dc1491f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +524,7 @@
         "id": "NQnVBYFmyE4l",
         "outputId": "bb4c502e-75b3-4c8e-88ff-ba04a0d98858"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,6 +557,106 @@
     {
       "cell_type": "code",
       "source": [
+        "def make_conv1d_cpu_scheduler_v5(M, N, factor=8, verbose=True):\n",
+        "    A = te.placeholder((M,), name=\"A\", dtype=\"float32\")\n",
+        "    W = te.placeholder((N,), name=\"W\", dtype=\"float32\")\n",
+        "    k = te.reduce_axis((0, N), name=\"k\")\n",
+        "    B = te.compute(\n",
+        "        (M + N - 1,),\n",
+        "        lambda n: te.sum(\n",
+        "            tvm.tir.if_then_else(\n",
+        "                tvm.tir.all(n - k >= 0, n - k < M),\n",
+        "                A[n - k] * W[k],\n",
+        "                tvm.tir.const(0.0, \"float32\")\n",
+        "            ),\n",
+        "            axis=k\n",
+        "        ),\n",
+        "        name=\"B\"\n",
+        "    )\n",
+        "\n",
+        "    s = te.create_schedule(B.op)\n",
+        "    n_axis = B.op.axis[0]\n",
+        "\n",
+        "    outer, inner = s[B].split(n_axis, factor=factor)\n",
+        "    s[B].parallel(outer)\n",
+        "    s[B].vectorize(inner)\n",
+        "    k_axis = B.op.reduce_axis[0]\n",
+        "    s[B].pragma(outer, \"auto_unroll_max_step\", 16)\n",
+        "    s[B].pragma(outer, \"unroll_explicit\", True)\n",
+        "\n",
+        "    if verbose:\n",
+        "        print(\"=\" * 100)\n",
+        "        print(tvm.lower(s, [A, W, B], simple_mode=True))\n",
+        "        print(\"=\" * 100)\n",
+        "    return s, A, W, B\n",
+        "\n",
+        "# optimized TVM v5\n",
+        "opt_time, opt_res, opt_func, opt_comp = benchmark_conv1d_tvm(\n",
+        "    make_conv1d_cpu_scheduler_v5, M, N, dev, a_np, w_np\n",
+        ")\n",
+        "np.testing.assert_allclose(opt_res, ref, rtol=1e-4)\n",
+        "print(f\"[TVM Manual Opt v5] time: {opt_time*1e3:.4f} ms\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K3EHyFDmuVjo",
+        "outputId": "231507fb-c5ea-44fa-d9b2-b6f687c1f3cc"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "====================================================================================================\n",
+            "# from tvm.script import ir as I\n",
+            "# from tvm.script import tir as T\n",
+            "\n",
+            "@I.ir_module\n",
+            "class Module:\n",
+            "    @T.prim_func\n",
+            "    def main(A: T.Buffer((4096,), \"float32\"), W: T.Buffer((128,), \"float32\"), B: T.Buffer((4223,), \"float32\")):\n",
+            "        T.func_attr({\"from_legacy_te_schedule\": T.bool(True), \"tir.noalias\": T.bool(True)})\n",
+            "        for n_outer in T.parallel(528):\n",
+            "            cse_var_1: T.int32 = n_outer * 8\n",
+            "            B[cse_var_1] = T.float32(0)\n",
+            "            B[cse_var_1 + 1] = T.float32(0)\n",
+            "            B[cse_var_1 + 2] = T.float32(0)\n",
+            "            B[cse_var_1 + 3] = T.float32(0)\n",
+            "            B[cse_var_1 + 4] = T.float32(0)\n",
+            "            B[cse_var_1 + 5] = T.float32(0)\n",
+            "            B[cse_var_1 + 6] = T.float32(0)\n",
+            "            if T.likely(n_outer < 527):\n",
+            "                B[cse_var_1 + 7] = T.float32(0)\n",
+            "            for k in range(128):\n",
+            "                cse_var_8: T.int32 = cse_var_1 - k\n",
+            "                cse_var_7: T.int32 = cse_var_1 + 6\n",
+            "                cse_var_6: T.int32 = cse_var_1 + 5\n",
+            "                cse_var_5: T.int32 = cse_var_1 + 4\n",
+            "                cse_var_4: T.int32 = cse_var_1 + 3\n",
+            "                cse_var_3: T.int32 = cse_var_1 + 2\n",
+            "                cse_var_2: T.int32 = cse_var_1 + 1\n",
+            "                B[cse_var_1] = B[cse_var_1] + T.if_then_else(0 <= cse_var_8 and cse_var_8 < 4096, A[cse_var_8] * W[k], T.float32(0))\n",
+            "                B[cse_var_2] = B[cse_var_2] + T.if_then_else(-1 <= cse_var_8 and cse_var_8 < 4095, A[cse_var_2 - k] * W[k], T.float32(0))\n",
+            "                B[cse_var_3] = B[cse_var_3] + T.if_then_else(-2 <= cse_var_8 and cse_var_8 < 4094, A[cse_var_3 - k] * W[k], T.float32(0))\n",
+            "                B[cse_var_4] = B[cse_var_4] + T.if_then_else(-3 <= cse_var_8 and cse_var_8 < 4093, A[cse_var_4 - k] * W[k], T.float32(0))\n",
+            "                B[cse_var_5] = B[cse_var_5] + T.if_then_else(-4 <= cse_var_8 and cse_var_8 < 4092, A[cse_var_5 - k] * W[k], T.float32(0))\n",
+            "                B[cse_var_6] = B[cse_var_6] + T.if_then_else(-5 <= cse_var_8 and cse_var_8 < 4091, A[cse_var_6 - k] * W[k], T.float32(0))\n",
+            "                B[cse_var_7] = B[cse_var_7] + T.if_then_else(-6 <= cse_var_8 and cse_var_8 < 4090, A[cse_var_7 - k] * W[k], T.float32(0))\n",
+            "                if T.likely(n_outer < 527):\n",
+            "                    cse_var_9: T.int32 = cse_var_1 + 7\n",
+            "                    B[cse_var_9] = B[cse_var_9] + T.if_then_else(-7 <= cse_var_8 and cse_var_8 < 4089, A[cse_var_9 - k] * W[k], T.float32(0))\n",
+            "====================================================================================================\n",
+            "[TVM Manual Opt v5] time: 0.4110 ms\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# numPy baseline\n",
         "numpy_time, numpy_out = benchmark_conv1d_numpy(a_np, w_np, num_runs=10)\n",
         "print(f\"[NumPy]   time: {numpy_time*1e3:.4f} ms\")\n",
@@ -592,7 +669,7 @@
         "id": "_OOp117fyFlV",
         "outputId": "2d266558-2805-4a8e-a976-6e24065f8eaf"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +692,7 @@
         "id": "CHDU-pOFYLXd",
         "outputId": "6a230cd2-9687-4572-e0bc-7ff5bbc3ddb8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +861,7 @@
         "id": "lgzvaq9PR1vO",
         "outputId": "f5a2760d-17d7-453a-8493-c7b37e210fc8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -799,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "3ozhQY7gumRH",
         "scrolled": true,
@@ -962,7 +1039,7 @@
         "id": "FG_tkFicwhNy",
         "outputId": "84178c17-8924-47b6-d2d7-eee6d8c686d2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
