--- a/gemm_gpu.ipynb
+++ b/gemm_gpu.ipynb
@@ -26,7 +26,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7601a931-1f2d-4eb3-8357-02484ff3f85c"
+        "outputId": "06cccfea-6944-4e24-942a-54645c3b83b1"
       },
       "outputs": [
         {
@@ -34,31 +34,17 @@
           "name": "stdout",
           "text": [
             "Looking in links: https://tlcpack.ai/wheels\n",
-            "Collecting tlcpack-nightly-cu102\n",
-            "  Downloading https://github.com/tlc-pack/tlcpack/releases/download/v0.12.dev/tlcpack_nightly_cu102-0.15.dev118%2Bg51bdaec6e-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (428.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m428.5/428.5 MB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: attrs in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (25.3.0)\n",
+            "Requirement already satisfied: tlcpack-nightly-cu102 in /usr/local/lib/python3.11/dist-packages (0.15.dev118+g51bdaec6e)\n",
+            "Requirement already satisfied: attrs in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (25.3.0)\n",
             "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (3.1.1)\n",
             "Requirement already satisfied: decorator in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (4.4.2)\n",
             "Requirement already satisfied: ml-dtypes in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (0.4.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (2.0.2)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (1.26.4)\n",
             "Requirement already satisfied: psutil in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (5.9.5)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (1.14.1)\n",
             "Requirement already satisfied: tornado in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (6.4.2)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (4.12.2)\n",
-            "Installing collected packages: tlcpack-nightly-cu102\n",
-            "Successfully installed tlcpack-nightly-cu102-0.15.dev118+g51bdaec6e\n",
-            "Collecting numpy<2.0.0\n",
-            "  Downloading numpy-1.26.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading numpy-1.26.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.3/18.3 MB\u001b[0m \u001b[31m13.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: numpy\n",
-            "  Attempting uninstall: numpy\n",
-            "    Found existing installation: numpy 2.0.2\n",
-            "    Uninstalling numpy-2.0.2:\n",
-            "      Successfully uninstalled numpy-2.0.2\n",
-            "Successfully installed numpy-1.26.4\n"
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.11/dist-packages (from tlcpack-nightly-cu102) (4.13.1)\n",
+            "Requirement already satisfied: numpy<2.0.0 in /usr/local/lib/python3.11/dist-packages (1.26.4)\n"
           ]
         }
       ],
@@ -130,12 +116,13 @@
         "dtype = 'float32'\n",
         "a_np = np.random.rand(M, K).astype(dtype)\n",
         "w_np = np.random.rand(K, N).astype(dtype)\n",
-        "ref = np.matmul(a_np, w_np)\n"
+        "ref = np.matmul(a_np, w_np)\n",
+        "dev = tvm.cuda()\n"
       ],
       "metadata": {
         "id": "e8ldlOVJDWbv"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -405,7 +392,7 @@
         "id": "kTCTuDABajYQ",
         "outputId": "5c043ad0-33da-4373-b996-f806e410f0e6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,6 +432,119 @@
             "                C_1[blockIdx_x * 8192 + threadIdx_x * 512 + blockIdx_y * 16 + threadIdx_y] = C_1[blockIdx_x * 8192 + threadIdx_x * 512 + blockIdx_y * 16 + threadIdx_y] + A_shared_1[threadIdx_x * 8 + k_inner] * B_shared_1[k_inner * 16 + threadIdx_y]\n",
             "====================================================================================================\n",
             "[TVM v3] time: 8.1074 ms\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# opt4: v3 + register caching + proper loop ordering\n",
+        "def make_gemm_gpu_scheduler_v4(M, K, N, verbose=True):\n",
+        "    k, s, A, B, C = base_declaration(M, K, N)\n",
+        "\n",
+        "    block_x, block_y = 32, 32\n",
+        "    tile_k = 4\n",
+        "\n",
+        "    CL = s.cache_write(C, \"local\")\n",
+        "\n",
+        "    bx, vx = s[C].split(C.op.axis[0], factor=block_x)\n",
+        "    by, vy = s[C].split(C.op.axis[1], factor=block_y)\n",
+        "\n",
+        "    s[C].bind(bx, te.thread_axis(\"blockIdx.x\"))\n",
+        "    s[C].bind(by, te.thread_axis(\"blockIdx.y\"))\n",
+        "    s[C].bind(vx, te.thread_axis(\"threadIdx.x\"))\n",
+        "    s[C].bind(vy, te.thread_axis(\"threadIdx.y\"))\n",
+        "\n",
+        "    # Schedule CL (local cache for C)\n",
+        "    s[CL].compute_at(s[C], vy)\n",
+        "\n",
+        "    # Split reduction axis\n",
+        "    ko, ki = s[CL].split(k, factor=tile_k)\n",
+        "\n",
+        "    # cache reads for A and B in shared memory\n",
+        "    AA = s.cache_read(A, \"shared\", [CL])\n",
+        "    BB = s.cache_read(B, \"shared\", [CL])\n",
+        "\n",
+        "    s[AA].compute_at(s[CL], ko)\n",
+        "    s[BB].compute_at(s[CL], ko)\n",
+        "\n",
+        "    # cooperative fetching for shared memory\n",
+        "    for load_buffer in [AA, BB]:\n",
+        "        fused = s[load_buffer].fuse(*s[load_buffer].op.axis)\n",
+        "        tz, fused = s[load_buffer].split(fused, nparts=block_y)\n",
+        "        tx, fused = s[load_buffer].split(fused, nparts=block_x)\n",
+        "        s[load_buffer].bind(tz, te.thread_axis(\"threadIdx.y\"))\n",
+        "        s[load_buffer].bind(tx, te.thread_axis(\"threadIdx.x\"))\n",
+        "\n",
+        "    if verbose:\n",
+        "        print(\"=\" * 100)\n",
+        "        print(tvm.lower(s, [A, B, C], simple_mode=True))\n",
+        "        print(\"=\" * 100)\n",
+        "\n",
+        "    return s, A, B, C\n",
+        "\n",
+        "# Test v4\n",
+        "print(\"Testing v4 implementation...\")\n",
+        "time_v4, res_v4, func_v4, comp_v4 = benchmark_gemm_tvm(\n",
+        "    make_gemm_gpu_scheduler_v4, M, K, N, dev, a_np, w_np, num_runs=20, repeat=20\n",
+        ")\n",
+        "np.testing.assert_allclose(res_v4, ref, rtol=1e-4)\n",
+        "print(f\"[TVM v4] time: {time_v4*1e3:.4f} ms\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b9hfu5fb-_Nb",
+        "outputId": "b200533a-d4c7-44ad-dc7e-04a46f51e802"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Testing v4 implementation...\n",
+            "====================================================================================================\n",
+            "# from tvm.script import ir as I\n",
+            "# from tvm.script import tir as T\n",
+            "\n",
+            "@I.ir_module\n",
+            "class Module:\n",
+            "    @T.prim_func\n",
+            "    def main(A: T.Buffer((1024, 2048), \"float32\"), B: T.Buffer((2048, 512), \"float32\"), C: T.Buffer((1024, 512), \"float32\")):\n",
+            "        T.func_attr({\"from_legacy_te_schedule\": T.bool(True), \"tir.noalias\": T.bool(True)})\n",
+            "        blockIdx_x = T.launch_thread(\"blockIdx.x\", 32)\n",
+            "        C_local = T.allocate([1], \"float32\", \"local\")\n",
+            "        A_shared = T.allocate([128], \"float32\", \"shared\")\n",
+            "        B_shared = T.allocate([128], \"float32\", \"shared\")\n",
+            "        threadIdx_x = T.launch_thread(\"threadIdx.x\", 32)\n",
+            "        blockIdx_y = T.launch_thread(\"blockIdx.y\", 16)\n",
+            "        threadIdx_y = T.launch_thread(\"threadIdx.y\", 32)\n",
+            "        C_local_1 = T.Buffer((1,), data=C_local, scope=\"local\", align=4)\n",
+            "        C_local_1[0] = T.float32(0)\n",
+            "        for k_outer in range(512):\n",
+            "            A_shared_1 = T.Buffer((128,), data=A_shared, scope=\"shared\")\n",
+            "            with T.launch_thread(\"threadIdx.y\", 32) as threadIdx_y_1:\n",
+            "                threadIdx_x_1 = T.launch_thread(\"threadIdx.x\", 32)\n",
+            "                if T.likely(threadIdx_x_1 // 4 + threadIdx_y_1 < 32):\n",
+            "                    if T.likely(threadIdx_x_1 < 4):\n",
+            "                        A_1 = T.Buffer((2097152,), data=A.data)\n",
+            "                        A_shared_1[threadIdx_y_1 * 4 + threadIdx_x_1] = A_1[blockIdx_x * 65536 + threadIdx_y_1 * 2048 + k_outer * 4 + threadIdx_x_1]\n",
+            "            B_shared_1 = T.Buffer((128,), data=B_shared, scope=\"shared\")\n",
+            "            with T.launch_thread(\"threadIdx.y\", 32) as threadIdx_y_1:\n",
+            "                threadIdx_x_1 = T.launch_thread(\"threadIdx.x\", 32)\n",
+            "                if T.likely(threadIdx_x_1 // 4 + threadIdx_y_1 < 32):\n",
+            "                    if T.likely(threadIdx_x_1 < 4):\n",
+            "                        B_1 = T.Buffer((1048576,), data=B.data)\n",
+            "                        B_shared_1[threadIdx_y_1 * 4 + threadIdx_x_1] = B_1[k_outer * 2048 + threadIdx_y_1 // 8 * 512 + blockIdx_y * 32 + threadIdx_y_1 % 8 * 4 + threadIdx_x_1]\n",
+            "            for k_inner in range(4):\n",
+            "                C_local_1[0] = C_local_1[0] + A_shared_1[threadIdx_x * 4 + k_inner] * B_shared_1[k_inner * 32 + threadIdx_y]\n",
+            "        C_1 = T.Buffer((524288,), data=C.data)\n",
+            "        C_1[blockIdx_x * 16384 + threadIdx_x * 512 + blockIdx_y * 32 + threadIdx_y] = C_local_1[0]\n",
+            "====================================================================================================\n",
+            "[TVM v4] time: 4.5598 ms\n"
           ]
         }
       ]
@@ -546,7 +646,7 @@
         "id": "yejZoS5Qsj1Y",
         "outputId": "2bf9f377-0842-4e9a-ee4d-6f845ff5f744"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
